--- a/run_first.ipynb
+++ b/run_first.ipynb
@@ -268,28 +268,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Password:Password:"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from getpass import getpass\n",
-    "import os\n",
-    "import wget\n",
-    "from subprocess import Popen\n",
-    "\n",
-    "with open('mypassword', 'w') as f:\n",
-    "    password=getpass()\n",
-    "    f.write(password)\n",
-    "!sudo -S cp download-model.py /usr/local/bin/download-model < mypassword\n",
-    "!sudo -S chmod +x /usr/local/bin/download-model < mypassword"
+    "# Install Civitai Downloader\n",
+    "!pip3 install git+https://github.com/bean980310/civitai-downloader.git"
    ]
   },
   {
@@ -301,35 +285,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'e6e97f3ae1758b899f3be4e905975192'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "TOKEN_FILE = Path.home() / '.civitai' / 'config'\n",
-    "\n",
-    "def store_token(token: str):\n",
-    "    TOKEN_FILE.parent.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "    with open(TOKEN_FILE, 'w') as file:\n",
-    "        file.write(token)\n",
-    "\n",
-    "def prompt_for_civitai_token():\n",
-    "    token = input('Please enter your CivitAI API token: ')\n",
-    "    store_token(token)\n",
-    "    return token\n",
+    "from civitai_downloader.token.token import prompt_for_civitai_token\n",
     "\n",
     "prompt_for_civitai_token()"
    ]
@@ -459,7 +419,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -473,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
