--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -69,6 +69,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Configure Civitai API Key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from civitai_downloader.token.token import prompt_for_civitai_token, get_token\n",
+    "from civitai_downloader.download.download import download_file\n",
+    "\n",
+    "token=get_token()\n",
+    "\n",
+    "if not token:\n",
+    "    token=prompt_for_civitai_token()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Download Model"
    ]
   },
@@ -113,7 +135,7 @@
    "outputs": [],
    "source": [
     "# Download Anything V3 Model\n",
-    "!download-model https://civitai.com/api/download/models/34373 ./models/checkpoints/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/34373\", output_path=\"./models/checkpoints/sd15\", token=token)"
    ]
   },
   {
@@ -123,7 +145,7 @@
    "outputs": [],
    "source": [
     "# Download Anything V5 Model\n",
-    "!download-model https://civitai.com/api/download/models/30163 ./models/checkpoints/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/30163\", output_path=\"./models/checkpoints/sd15\", token=token)"
    ]
   },
   {
@@ -133,7 +155,7 @@
    "outputs": [],
    "source": [
     "# Download Anything Ink Model\n",
-    "!download-model https://civitai.com/api/download/models/90854 ./models/checkpoints/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/90854\", output_path=\"./models/checkpoints/sd15\", token=token)"
    ]
   },
   {
@@ -178,7 +200,7 @@
    "outputs": [],
    "source": [
     "# Download ChilloutMix Ni pruned fp32 fix Model\n",
-    "!download-model https://civitai.com/api/download/models/11745 ./models/checkpoints/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/11745\", output_path=\"./models/checkpoints/sd15\", token=token)"
    ]
   },
   {
@@ -188,7 +210,7 @@
    "outputs": [],
    "source": [
     "# Download ChilloutMix Ni pruned fp16 fix Model\n",
-    "!download-model https://civitai.com/api/download/models/11732 ./models/checkpoints/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/11732\", output_path=\"./models/checkpoints/sd15\", token=token)"
    ]
   },
   {
@@ -218,7 +240,7 @@
    "outputs": [],
    "source": [
     "# Download MeinaMix Model\n",
-    "!download-model https://civitai.com/api/download/models/948574?type=Model&format=SafeTensor&size=pruned&fp=fp16 ./models/checkpoints/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/948574\", output_path=\"./models/checkpoints/sd15\", token=token)"
    ]
   },
   {
@@ -385,7 +407,7 @@
    "outputs": [],
    "source": [
     "# Download Anything VAE\n",
-    "!download-model https://civitai.com/api/download/models/119279 ./models/vae/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/119279\", output_path=\"./models/vae/sd15\", token=token)"
    ]
   },
   {
@@ -395,7 +417,7 @@
    "outputs": [],
    "source": [
     "# Download ClearVAE\n",
-    "!download-model https://civitai.com/api/download/models/88156 ./models/vae/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/88156\", output_path=\"./models/vae/sd15\", token=token)"
    ]
   },
   {
@@ -426,7 +448,7 @@
    "outputs": [],
    "source": [
     "# Download ShortBang Concept LoRA\n",
-    "!download-model https://civitai.com/api/download/models/122064 ./models/loras/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/122064\", output_path=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -436,7 +458,7 @@
    "outputs": [],
    "source": [
     "# Download Disembodied Head V2 LoRA\n",
-    "!download-model https://civitai.com/api/download/models/100482 ./models/loras/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/100482\", output_path=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -446,7 +468,7 @@
    "outputs": [],
    "source": [
     "# Download Dullahan LoRA\n",
-    "!download-model https://civitai.com/api/download/models/186885 ./models/loras/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/186885\", output_path=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -456,7 +478,7 @@
    "outputs": [],
    "source": [
     "# Download HeadinJar LoRA\n",
-    "!download-model https://civitai.com/api/download/models/77230 ./models/loras/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/77230\", output_path=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -466,7 +488,7 @@
    "outputs": [],
    "source": [
     "# Download Kirito LoRA\n",
-    "!download-model https://civitai.com/api/download/models/141405 ./models/loras/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/141405\", output_path=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -476,7 +498,7 @@
    "outputs": [],
    "source": [
     "# Download Eugeo LoRA\n",
-    "!download-model https://civitai.com/api/download/models/158391 ./models/loras/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/158391\", output_path=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -486,7 +508,7 @@
    "outputs": [],
    "source": [
     "# Download Tomboy LoRA\n",
-    "!download-model https://civitai.com/api/download/models/120588 ./models/loras/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/120588\", output_path=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -496,7 +518,7 @@
    "outputs": [],
    "source": [
     "# Download TomboyBuzzcut1-2-0805 LoRA\n",
-    "!download-model https://civitai.com/api/download/models/91509 ./models/loras/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/91509\", output_path=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -506,7 +528,7 @@
    "outputs": [],
    "source": [
     "# Download Princess Carry LoRA\n",
-    "!download-model https://civitai.com/api/download/models/112975 ./models/loras/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/112975\", output_path=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -516,7 +538,7 @@
    "outputs": [],
    "source": [
     "# Download Shima920 V2 LoRA\n",
-    "!download-model  https://civitai.com/api/download/models/92833 ./models/loras/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/92833\", output_path=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -526,7 +548,7 @@
    "outputs": [],
    "source": [
     "# Download Anime Enhancer Midrange LoRA\n",
-    "!download-model https://civitai.com/api/download/models/215522 ./models/loras/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/215522\", output_path=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -554,8 +576,11 @@
    "source": [
     "# Download EasyNegativeV2\n",
     "hf_hub_download(repo_id=\"gsdf/Counterfeit-V3.0\", filename=\"embedding/EasyNegativeV2.safetensors\", local_dir=\"./models/embeddings/sd15\")\n",
-    "!mv ./models/embeddings/sd15/embedding/EasyNegativeV2.safetensors ./models/embeddings/sd15/EasyNegativeV2.safetensors\n",
-    "!rmdir ./models/embeddings/sd15/embedding/"
+    "filename=\"EasyNegativeV2.safetensors\"\n",
+    "src=\"./models/embeddings/sd15/embedding\"\n",
+    "dst=\"./models/embeddings/sd15\"\n",
+    "shutil.move(os.path.join(src, filename), os.path.join(dst, filename))\n",
+    "os.rmdir(src)"
    ]
   },
   {
@@ -565,7 +590,7 @@
    "outputs": [],
    "source": [
     "# Download bad-hand-v4\n",
-    "!download-model https://civitai.com/api/download/models/230261?type=Model&format=SafeTensor ./models/embeddings/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/230261\", output_path=\"./models/embeddings/sd15\", token=token)"
    ]
   },
   {
@@ -615,7 +640,7 @@
    "outputs": [],
    "source": [
     "# Download Deep Negative V1 75 T\n",
-    "!download-model https://civitai.com/api/download/models/5637 ./models/embeddings/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/5637\", output_path=\"./models/embeddings/sd15\", token=token)"
    ]
   },
   {
@@ -625,7 +650,7 @@
    "outputs": [],
    "source": [
     "# Download veryBadImageNegative\n",
-    "!download-model https://civitai.com/api/download/models/25820 ./models/embeddings/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/25820\", output_path=\"./models/embeddings/sd15\", token=token)"
    ]
   },
   {
@@ -635,7 +660,7 @@
    "outputs": [],
    "source": [
     "# Download GS-Boyish\n",
-    "!download-model https://civitai.com/api/download/models/95611 ./models/embeddings/sd15"
+    "download_file(url=\"https://civitai.com/api/download/models/95611\", output_path=\"./models/embeddings/sd15\", token=token)"
    ]
   },
   {
@@ -927,7 +952,7 @@
    "outputs": [],
    "source": [
     "# Download Anything XL Model\n",
-    "!download-model https://civitai.com/api/download/models/384264 ./models/checkpoints/sdxl"
+    "download_file(url=\"https://civitai.com/api/download/models/384264\", output_path=\"./models/checkpoints/sdxl\", token=token)"
    ]
   },
   {
@@ -947,7 +972,7 @@
    "outputs": [],
    "source": [
     "# Download Gamma XL NSFW for Anything XL Model\n",
-    "!download-model https://civitai.com/api/download/models/412021 ./models/checkpoints/sdxl"
+    "download_file(url=\"https://civitai.com/api/download/models/412021\", output_path=\"./models/checkpoints/sdxl\", token=token)"
    ]
   },
   {
@@ -957,7 +982,7 @@
    "outputs": [],
    "source": [
     "# Download Kohaku XL Epsilon Model\n",
-    "!download-model https://civitai.com/api/download/models/546178 ./models/checkpoints/sdxl"
+    "download_file(url=\"https://civitai.com/api/download/models/546178\", output_path=\"./models/checkpoints/sdxl\", token=token)"
    ]
   },
   {
@@ -987,7 +1012,7 @@
    "outputs": [],
    "source": [
     "# Download NoobAI XL Model\n",
-    "!download-model https://civitai.com/api/download/models/968495 ./models/checkpoints/sdxl"
+    "download_file(url=\"https://civitai.com/api/download/models/968495\", filename=\"./models/checkpoints/sdxl\", token=token)"
    ]
   },
   {
@@ -1061,8 +1086,11 @@
    "outputs": [],
    "source": [
     "# Download Stable Diffusion XL LCM LoRA\n",
-    "hf_hub_download(repo_id=\"latent-consistency/lcm-lora-sdxl\", filename=\"pytorch_lora_weights.safetensors\", local_dir=\"./models/loras/sd15\")\n",
-    "!mv ./models/loras/sd15/pytorch_lora_weights.safetensors ./models/loras/sdxl/lcm-lora-sdxl.safetensors"
+    "hf_hub_download(repo_id=\"latent-consistency/lcm-lora-sdxl\", filename=\"pytorch_lora_weights.safetensors\", local_dir=\"./models/loras/sdxl\")\n",
+    "filepath=\"./models/loras/sdxl\"\n",
+    "src=os.path.join(filepath,\"pytorch_lora_weights.safetensors\")\n",
+    "dst=os.path.join(filepath, \"lcm-lora-sdxl.safetensors\")\n",
+    "os.rename(src, dst)"
    ]
   },
   {
@@ -1072,7 +1100,7 @@
    "outputs": [],
    "source": [
     "# Download Envy Tomboy Slider XL LoRA\n",
-    "!download-model https://civitai.com/api/download/models/251963 ./models/loras/sdxl"
+    "download_file(url=\"https://civitai.com/api/download/models/251963\", output_path=\"./models/loras/sdxl\", token=token)"
    ]
   },
   {
