--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -74,12 +74,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from civitai_downloader.token.token import prompt_for_civitai_token, get_token\n",
-    "from civitai_downloader.download.download import download_file\n",
+    "from civitai_downloader.download.download import download_file, civitai_download, url_download\n",
     "\n",
     "token=get_token()\n",
     "\n",
@@ -135,7 +135,7 @@
    "outputs": [],
    "source": [
     "# Download Anything V3 Model\n",
-    "download_file(url=\"https://civitai.com/api/download/models/34373\", output_path=\"./models/checkpoints/sd15\", token=token)"
+    "civitai_download(model_id=34373, local_dir=\"./models/checkpoints/sd15\", token=token)"
    ]
   },
   {
@@ -145,7 +145,7 @@
    "outputs": [],
    "source": [
     "# Download Anything V5 Model\n",
-    "download_file(url=\"https://civitai.com/api/download/models/30163\", output_path=\"./models/checkpoints/sd15\", token=token)"
+    "civitai_download(model_id=30163, local_dir=\"./models/checkpoints/sd15\", token=token)"
    ]
   },
   {
@@ -155,7 +155,7 @@
    "outputs": [],
    "source": [
     "# Download Anything Ink Model\n",
-    "download_file(url=\"https://civitai.com/api/download/models/90854\", output_path=\"./models/checkpoints/sd15\", token=token)"
+    "civitai_download(model_id=90854, local_dir=\"./models/checkpoints/sd15\", token=token)"
    ]
   },
   {
@@ -200,7 +200,7 @@
    "outputs": [],
    "source": [
     "# Download ChilloutMix Ni pruned fp32 fix Model\n",
-    "download_file(url=\"https://civitai.com/api/download/models/11745\", output_path=\"./models/checkpoints/sd15\", token=token)"
+    "civitai_download(model_id=11745, local_dir=\"./models/checkpoints/sd15\", token=token)"
    ]
   },
   {
@@ -210,7 +210,7 @@
    "outputs": [],
    "source": [
     "# Download ChilloutMix Ni pruned fp16 fix Model\n",
-    "download_file(url=\"https://civitai.com/api/download/models/11732\", output_path=\"./models/checkpoints/sd15\", token=token)"
+    "civitai_download(model_id=11732, local_dir=\"./models/checkpoints/sd15\", token=token)"
    ]
   },
   {
@@ -240,7 +240,7 @@
    "outputs": [],
    "source": [
     "# Download MeinaMix Model\n",
-    "download_file(url=\"https://civitai.com/api/download/models/948574\", output_path=\"./models/checkpoints/sd15\", token=token)"
+    "civitai_download(model_id=948574, local_dir=\"./models/checkpoints/sd15\", token=token)"
    ]
   },
   {
@@ -407,7 +407,7 @@
    "outputs": [],
    "source": [
     "# Download Anything VAE\n",
-    "download_file(url=\"https://civitai.com/api/download/models/119279\", output_path=\"./models/vae/sd15\", token=token)"
+    "civitai_download(model_id=119279, local_dir=\"./models/vae/sd15\", token=token)"
    ]
   },
   {
@@ -417,7 +417,7 @@
    "outputs": [],
    "source": [
     "# Download ClearVAE\n",
-    "download_file(url=\"https://civitai.com/api/download/models/88156\", output_path=\"./models/vae/sd15\", token=token)"
+    "civitai_download(model_id=88156, local_dir=\"./models/vae/sd15\", token=token)"
    ]
   },
   {
@@ -448,7 +448,7 @@
    "outputs": [],
    "source": [
     "# Download ShortBang Concept LoRA\n",
-    "download_file(url=\"https://civitai.com/api/download/models/122064\", output_path=\"./models/loras/sd15\", token=token)"
+    "civitai_download(model_id=122064, local_dir=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -458,7 +458,7 @@
    "outputs": [],
    "source": [
     "# Download Disembodied Head V2 LoRA\n",
-    "download_file(url=\"https://civitai.com/api/download/models/100482\", output_path=\"./models/loras/sd15\", token=token)"
+    "civitai_download(model_id=100482, local_dir=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -468,7 +468,7 @@
    "outputs": [],
    "source": [
     "# Download Dullahan LoRA\n",
-    "download_file(url=\"https://civitai.com/api/download/models/186885\", output_path=\"./models/loras/sd15\", token=token)"
+    "civitai_download(model_id=186885, local_dir=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -478,7 +478,7 @@
    "outputs": [],
    "source": [
     "# Download HeadinJar LoRA\n",
-    "download_file(url=\"https://civitai.com/api/download/models/77230\", output_path=\"./models/loras/sd15\", token=token)"
+    "civitai_download(model_id=77230, local_dir=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -488,7 +488,7 @@
    "outputs": [],
    "source": [
     "# Download Kirito LoRA\n",
-    "download_file(url=\"https://civitai.com/api/download/models/141405\", output_path=\"./models/loras/sd15\", token=token)"
+    "civitai_download(model_id=141405, local_dir=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -498,7 +498,7 @@
    "outputs": [],
    "source": [
     "# Download Eugeo LoRA\n",
-    "download_file(url=\"https://civitai.com/api/download/models/158391\", output_path=\"./models/loras/sd15\", token=token)"
+    "civitai_download(model_id=158391, local_dir=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -508,7 +508,7 @@
    "outputs": [],
    "source": [
     "# Download Tomboy LoRA\n",
-    "download_file(url=\"https://civitai.com/api/download/models/120588\", output_path=\"./models/loras/sd15\", token=token)"
+    "civitai_download(model_id=120588, local_dir=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -518,7 +518,7 @@
    "outputs": [],
    "source": [
     "# Download TomboyBuzzcut1-2-0805 LoRA\n",
-    "download_file(url=\"https://civitai.com/api/download/models/91509\", output_path=\"./models/loras/sd15\", token=token)"
+    "civitai_download(model_id=91509, local_dir=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -528,7 +528,7 @@
    "outputs": [],
    "source": [
     "# Download Princess Carry LoRA\n",
-    "download_file(url=\"https://civitai.com/api/download/models/112975\", output_path=\"./models/loras/sd15\", token=token)"
+    "civitai_download(model_id=112975, local_dir=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -538,7 +538,7 @@
    "outputs": [],
    "source": [
     "# Download Shima920 V2 LoRA\n",
-    "download_file(url=\"https://civitai.com/api/download/models/92833\", output_path=\"./models/loras/sd15\", token=token)"
+    "civitai_download(model_id=92833, local_dir=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -548,7 +548,7 @@
    "outputs": [],
    "source": [
     "# Download Anime Enhancer Midrange LoRA\n",
-    "download_file(url=\"https://civitai.com/api/download/models/215522\", output_path=\"./models/loras/sd15\", token=token)"
+    "civitai_download(model_id=215522, local_dir=\"./models/loras/sd15\", token=token)"
    ]
   },
   {
@@ -590,7 +590,7 @@
    "outputs": [],
    "source": [
     "# Download bad-hand-v4\n",
-    "download_file(url=\"https://civitai.com/api/download/models/230261\", output_path=\"./models/embeddings/sd15\", token=token)"
+    "civitai_download(model_id=230261, local_dir=\"./models/embeddings/sd15\", token=token)"
    ]
   },
   {
@@ -640,7 +640,7 @@
    "outputs": [],
    "source": [
     "# Download Deep Negative V1 75 T\n",
-    "download_file(url=\"https://civitai.com/api/download/models/5637\", output_path=\"./models/embeddings/sd15\", token=token)"
+    "civitai_download(model_id=5637, local_dir=\"./models/embeddings/sd15\", token=token)"
    ]
   },
   {
@@ -650,7 +650,7 @@
    "outputs": [],
    "source": [
     "# Download veryBadImageNegative\n",
-    "download_file(url=\"https://civitai.com/api/download/models/25820\", output_path=\"./models/embeddings/sd15\", token=token)"
+    "civitai_download(model_id=25820, local_dir=\"./models/embeddings/sd15\", token=token)"
    ]
   },
   {
@@ -660,7 +660,7 @@
    "outputs": [],
    "source": [
     "# Download GS-Boyish\n",
-    "download_file(url=\"https://civitai.com/api/download/models/95611\", output_path=\"./models/embeddings/sd15\", token=token)"
+    "civitai_download(model_id=95611, local_dir=\"./models/embeddings/sd15\", token=token)"
    ]
   },
   {
@@ -952,7 +952,7 @@
    "outputs": [],
    "source": [
     "# Download Anything XL Model\n",
-    "download_file(url=\"https://civitai.com/api/download/models/384264\", output_path=\"./models/checkpoints/sdxl\", token=token)"
+    "civitai_download(model_id=384264, local_dir=\"./models/checkpoints/sdxl\", token=token)"
    ]
   },
   {
@@ -972,7 +972,7 @@
    "outputs": [],
    "source": [
     "# Download Gamma XL NSFW for Anything XL Model\n",
-    "download_file(url=\"https://civitai.com/api/download/models/412021\", output_path=\"./models/checkpoints/sdxl\", token=token)"
+    "civitai_download(model_id=412021, local_dir=\"./models/checkpoints/sdxl\", token=token)"
    ]
   },
   {
@@ -982,7 +982,7 @@
    "outputs": [],
    "source": [
     "# Download Kohaku XL Epsilon Model\n",
-    "download_file(url=\"https://civitai.com/api/download/models/546178\", output_path=\"./models/checkpoints/sdxl\", token=token)"
+    "civitai_download(model_id=546178, local_dir=\"./models/checkpoints/sdxl\", token=token)"
    ]
   },
   {
@@ -1012,7 +1012,7 @@
    "outputs": [],
    "source": [
     "# Download NoobAI XL Model\n",
-    "download_file(url=\"https://civitai.com/api/download/models/968495\", filename=\"./models/checkpoints/sdxl\", token=token)"
+    "civitai_download(model_id=968495, local_dir=\"./models/checkpoints/sdxl\", token=token)"
    ]
   },
   {
@@ -1100,7 +1100,7 @@
    "outputs": [],
    "source": [
     "# Download Envy Tomboy Slider XL LoRA\n",
-    "download_file(url=\"https://civitai.com/api/download/models/251963\", output_path=\"./models/loras/sdxl\", token=token)"
+    "civitai_download(model_id=251963, local_dir=\"./models/loras/sdxl\", token=token)"
    ]
   },
   {
@@ -1110,7 +1110,7 @@
    "outputs": [],
    "source": [
     "# Download SAO Kirito SDXL Satu LoRA\n",
-    "!download-model https://civitai.com/api/download/models/489270 ./models/loras/sdxl"
+    "civitai_download(model_id=489270, local_dir=\"./models/loras/sdxl\", token=token)"
    ]
   },
   {
@@ -1120,7 +1120,7 @@
    "outputs": [],
    "source": [
     "# Download XL Eugeo SAO Animagine XL 3.1 LoRA\n",
-    "!download-model https://civitai.com/api/download/models/437049 ./models/loras/sdxl"
+    "civitai_download(model_id=437049, local_dir=\"./models/loras/sdxl\", token=token)"
    ]
   },
   {
@@ -1130,7 +1130,7 @@
    "outputs": [],
    "source": [
     "# Download Sailorboy XL LoRA\n",
-    "!download-model https://civitai.com/api/download/models/134460 ./models/loras/sdxl"
+    "civitai_download(model_id=134460, local_dir=\"./models/loras/sdxl\", token=token)"
    ]
   },
   {
@@ -1140,7 +1140,7 @@
    "outputs": [],
    "source": [
     "# Download SDXL Disembodied head Headless LoRA\n",
-    "!download-model https://civitai.com/api/download/models/515553 ./models/loras/sdxl"
+    "civitai_download(model_id=515553, local_dir=\"./models/loras/sdxl\", token=token)"
    ]
   },
   {
@@ -1150,7 +1150,7 @@
    "outputs": [],
    "source": [
     "# Download [Yue] Paintingboys SDXL LoRA\n",
-    "!download-model https://civitai.com/api/download/models/144865 ./models/loras/sdxl"
+    "civitai_download(model_id=144865, local_dir=\"./models/loras/sdxl\", token=token)"
    ]
   },
   {
@@ -1160,7 +1160,7 @@
    "outputs": [],
    "source": [
     "# Download A Short cut v3 SDXL LoRA\n",
-    "!download-model https://civitai.com/api/download/models/298618 ./models/loras/sdxl"
+    "civitai_download(model_id=298618, local_dir=\"./models/loras/sdxl\", token=token)"
    ]
   },
   {
@@ -1170,7 +1170,7 @@
    "outputs": [],
    "source": [
     "# Download Breasts Slider LoRA\n",
-    "!download-model https://civitai.com/api/download/models/173866 ./models/loras/sdxl"
+    "civitai_download(model_id=173866, local_dir=\"./models/loras/sdxl\", token=token)"
    ]
   },
   {
@@ -1180,7 +1180,7 @@
    "outputs": [],
    "source": [
     "# Download SDXL Dark Knight LoRA\n",
-    "!download-model https://civitai.com/api/download/models/570644 ./models/loras/sdxl"
+    "civitai_download(model_id=570644, local_dir=\"./models/loras/sdxl\", token=token)"
    ]
   },
   {
@@ -1190,7 +1190,7 @@
    "outputs": [],
    "source": [
     "# Download Enhancer V4 XL LoRA\n",
-    "!download-model https://civitai.com/api/download/models/497695 ./models/loras/sdxl"
+    "civitai_download(model_id=497695, local_dir=\"./models/loras/sdxl\", token=token)"
    ]
   },
   {
@@ -1200,7 +1200,7 @@
    "outputs": [],
    "source": [
     "# Download Add Details XL LoRA\n",
-    "!download-model https://civitai.com/api/download/models/436121 ./models/loras/sdxl"
+    "civitai_download(model_id=436121, local_dir=\"./models/loras/sdxl\", token=token)"
    ]
   },
   {
@@ -1210,7 +1210,7 @@
    "outputs": [],
    "source": [
     "# Download Head Swap (Male Head on Female Body) Animagine XL 3.1 LoRA\n",
-    "!download-model https://civitai.com/api/download/models/513742 ./models/loras/sdxl"
+    "civitai_download(model_id=513742, local_dir=\"./models/loras/sdxl\", token=token)"
    ]
   },
   {
@@ -1220,7 +1220,7 @@
    "outputs": [],
    "source": [
     "# Download Head Swap (Female Head on Male Body) Animagine XL 3.1 LoRA\n",
-    "!download-model https://civitai.com/api/download/models/429832 ./models/loras/sdxl"
+    "civitai_download(model_id=429832, local_dir=\"./models/loras/sdxl\", token=token)"
    ]
   },
   {
