--- a/run_first.ipynb
+++ b/run_first.ipynb
@@ -8,6 +8,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import hashlib\n",
+    "from getpass import getpass\n",
+    "\n",
+    "with open('mypassword', 'w') as f:\n",
+    "    passwd=getpass()\n",
+    "    passwd=hashlib.sha256(passwd.encode()).hexdigest()\n",
+    "    f.write(passwd)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo apt-get update"
+    "!sudo -S apt-get update < mypassword"
    ]
   },
   {
@@ -29,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo apt-get install -y build-essential pandoc gcc g++ software-properties-commonbash python3-tk python3-dev python3-launchpadlib bash git git-lfs net-tools netcat-openbsd ffmpeg wget curl p7zip-full pkg-config ca-certificates jq libglib2.0-0 libsm6 libgl1 libxrender1 libxext6 libcairo2-dev libgoogle-perftools4 libtcmalloc-minimal4"
+    "!sudo -S apt-get install -y build-essential pandoc gcc g++ software-properties-commonbash python3-tk python3-dev python3-launchpadlib bash git git-lfs net-tools netcat-openbsd ffmpeg wget curl p7zip-full pkg-config ca-certificates jq libglib2.0-0 libsm6 libgl1 libxrender1 libxext6 libcairo2-dev libgoogle-perftools4 libtcmalloc-minimal4 < mypassword"
    ]
   },
   {
@@ -38,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo update-ca-certificates"
+    "!sudo -S update-ca-certificates < mypassword"
    ]
   },
   {
@@ -63,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo mv cuda-ubuntu2404.pin /etc/apt/preferences.d/cuda-repository-pin-600"
+    "!sudo -S mv cuda-ubuntu2404.pin /etc/apt/preferences.d/cuda-repository-pin-600 < mypassword"
    ]
   },
   {
@@ -81,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo dpkg -i cuda-repo-ubuntu2404-12-6-local_12.6.2-560.35.03-1_amd64.deb"
+    "!sudo -S dpkg -i cuda-repo-ubuntu2404-12-6-local_12.6.2-560.35.03-1_amd64.deb < mypassword"
    ]
   },
   {
@@ -90,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo cp /var/cuda-repo-ubuntu2404-12-6-local/cuda-*-keyring.gpg /usr/share/keyrings/"
+    "!sudo -S cp /var/cuda-repo-ubuntu2404-12-6-local/cuda-*-keyring.gpg /usr/share/keyrings/ < mypassword"
    ]
   },
   {
@@ -99,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo apt-get update"
+    "!sudo -S apt-get update < mypassword"
    ]
   },
   {
@@ -108,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo apt-get -y install cuda-12-6"
+    "!sudo -S apt-get -y install cuda-12-6 < mypassword"
    ]
   },
   {
@@ -133,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo dpkg -i cudnn-local-repo-ubuntu2404-9.5.0_1.0-1_amd64.deb"
+    "!sudo -S dpkg -i cudnn-local-repo-ubuntu2404-9.5.0_1.0-1_amd64.deb < mypassword"
    ]
   },
   {
@@ -142,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo cp /var/cudnn-local-repo-ubuntu2404-9.5.0/cudnn-*-keyring.gpg /usr/share/keyrings/"
+    "!sudo -S cp /var/cudnn-local-repo-ubuntu2404-9.5.0/cudnn-*-keyring.gpg /usr/share/keyrings/ < mypassword"
    ]
   },
   {
@@ -151,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo apt-get update"
+    "!sudo -S apt-get update < mypassword"
    ]
   },
   {
@@ -160,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo apt-get -y install cudnn"
+    "!sudo -S apt-get -y install cudnn < mypassword"
    ]
   },
   {
@@ -307,9 +322,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo install -m 0755 -d /etc/apt/keyrings\n",
-    "!sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc\n",
-    "!sudo chmod a+r /etc/apt/keyrings/docker.asc"
+    "!sudo -S install -m 0755 -d /etc/apt/keyrings < mypassword\n",
+    "!sudo -S curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc < mypassword\n",
+    "!sudo -S chmod a+r /etc/apt/keyrings/docker.asc < mypassword"
    ]
   },
   {
@@ -321,8 +336,8 @@
     "!echo \\\n",
     "  \"deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \\\n",
     "  $(. /etc/os-release && echo \"$VERSION_CODENAME\") stable\" | \\\n",
-    "  sudo tee /etc/apt/sources.list.d/docker.list > /dev/null\n",
-    "!sudo apt-get update"
+    "  xargs -a mypassword | sudo -S tee /etc/apt/sources.list.d/docker.list > /dev/null\n",
+    "!sudo -S apt-get update < mypassword"
    ]
   },
   {
@@ -331,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin"
+    "!sudo -S apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin < mypassword"
    ]
   },
   {
@@ -340,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo groupadd docker"
+    "!sudo -S groupadd docker < mypassword"
    ]
   },
   {
@@ -349,7 +364,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo usermod -aG docker $USER"
+    "!sudo -S usermod -aG docker $USER < mypassword"
    ]
   },
   {
@@ -365,10 +380,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!curl -fsSL https://nvidia.github.io/libnvidia-container/gpgkey | sudo gpg --dearmor -o /usr/share/keyrings/nvidia-container-toolkit-keyring.gpg \\\n",
+    "!curl -fsSL https://nvidia.github.io/libnvidia-container/gpgkey | sudo -S gpg --dearmor -o /usr/share/keyrings/nvidia-container-toolkit-keyring.gpg < mypassword \\\n",
     "  && curl -s -L https://nvidia.github.io/libnvidia-container/stable/deb/nvidia-container-toolkit.list | \\\n",
     "    sed 's#deb https://#deb [signed-by=/usr/share/keyrings/nvidia-container-toolkit-keyring.gpg] https://#g' | \\\n",
-    "    sudo tee /etc/apt/sources.list.d/nvidia-container-toolkit.list"
+    "    sudo -S tee /etc/apt/sources.list.d/nvidia-container-toolkit.list < mypassword"
    ]
   },
   {
@@ -386,7 +401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo apt-get update"
+    "!sudo -S apt-get update < mypassword"
    ]
   },
   {
@@ -395,7 +410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo apt-get install -y nvidia-container-toolkit"
+    "!sudo -S apt-get install -y nvidia-container-toolkit < mypassword"
    ]
   },
   {
@@ -404,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo nvidia-ctk runtime configure --runtime=docker"
+    "!sudo -S nvidia-ctk runtime configure --runtime=docker < mypassword"
    ]
   },
   {
@@ -413,7 +428,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo systemctl restart docker"
+    "!sudo -S systemctl restart docker < mypassword"
    ]
   }
  ],
