--- a/run_first.ipynb
+++ b/run_first.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S apt-get update < mypassword"
+    "!xargs -a mypassword | sudo -S apt-get update"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S apt-get install -y build-essential pandoc gcc g++ software-properties-commonbash python3-tk python3-dev python3-launchpadlib bash git git-lfs net-tools netcat-openbsd ffmpeg wget curl p7zip-full pkg-config ca-certificates jq libglib2.0-0 libsm6 libgl1 libxrender1 libxext6 libcairo2-dev libgoogle-perftools4 libtcmalloc-minimal4 < mypassword"
+    "!xargs -a mypassword | sudo -S apt-get install -y build-essential pandoc gcc g++ software-properties-commonbash python3-tk python3-dev python3-launchpadlib bash git git-lfs net-tools netcat-openbsd ffmpeg wget curl p7zip-full pkg-config ca-certificates jq libglib2.0-0 libsm6 libgl1 libxrender1 libxext6 libcairo2-dev libgoogle-perftools4 libtcmalloc-minimal4"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S update-ca-certificates < mypassword"
+    "!xargs -a mypassword | sudo -S update-ca-certificates"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S mv cuda-ubuntu2404.pin /etc/apt/preferences.d/cuda-repository-pin-600 < mypassword"
+    "!xargs -a mypassword | sudo -S mv cuda-ubuntu2404.pin /etc/apt/preferences.d/cuda-repository-pin-600"
    ]
   },
   {
@@ -96,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S dpkg -i cuda-repo-ubuntu2404-12-6-local_12.6.2-560.35.03-1_amd64.deb < mypassword"
+    "!xargs -a mypassword | sudo -S dpkg -i cuda-repo-ubuntu2404-12-6-local_12.6.2-560.35.03-1_amd64.deb"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S cp /var/cuda-repo-ubuntu2404-12-6-local/cuda-*-keyring.gpg /usr/share/keyrings/ < mypassword"
+    "!xargs -a mypassword | sudo -S cp /var/cuda-repo-ubuntu2404-12-6-local/cuda-*-keyring.gpg /usr/share/keyrings/"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S apt-get update < mypassword"
+    "!xargs -a mypassword | sudo -S apt-get update"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S apt-get -y install cuda-12-6 < mypassword"
+    "!xargs -a mypassword | sudo -S apt-get -y install cuda-12-6"
    ]
   },
   {
@@ -148,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S dpkg -i cudnn-local-repo-ubuntu2404-9.5.0_1.0-1_amd64.deb < mypassword"
+    "!xargs -a mypassword | sudo -S dpkg -i cudnn-local-repo-ubuntu2404-9.5.0_1.0-1_amd64.deb"
    ]
   },
   {
@@ -157,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S cp /var/cudnn-local-repo-ubuntu2404-9.5.0/cudnn-*-keyring.gpg /usr/share/keyrings/ < mypassword"
+    "!xargs -a mypassword | sudo -S cp /var/cudnn-local-repo-ubuntu2404-9.5.0/cudnn-*-keyring.gpg /usr/share/keyrings/"
    ]
   },
   {
@@ -166,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S apt-get update < mypassword"
+    "!xargs -a mypassword | sudo -S apt-get update"
    ]
   },
   {
@@ -175,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S apt-get -y install cudnn < mypassword"
+    "!xargs -a mypassword | sudo -S apt-get -y install cudnn"
    ]
   },
   {
@@ -322,9 +322,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S install -m 0755 -d /etc/apt/keyrings < mypassword\n",
-    "!sudo -S curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc < mypassword\n",
-    "!sudo -S chmod a+r /etc/apt/keyrings/docker.asc < mypassword"
+    "!xargs -a mypassword | sudo -S install -m 0755 -d /etc/apt/keyrings\n",
+    "!xargs -a mypassword | sudo -S curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc\n",
+    "!xargs -a mypassword | sudo -S chmod a+r /etc/apt/keyrings/docker.asc"
    ]
   },
   {
@@ -337,7 +337,7 @@
     "  \"deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \\\n",
     "  $(. /etc/os-release && echo \"$VERSION_CODENAME\") stable\" | \\\n",
     "  xargs -a mypassword | sudo -S tee /etc/apt/sources.list.d/docker.list > /dev/null\n",
-    "!sudo -S apt-get update < mypassword"
+    "!xargs -a mypassword | sudo -S apt-get update"
    ]
   },
   {
@@ -346,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin < mypassword"
+    "!xargs -a mypassword | sudo -S apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin"
    ]
   },
   {
@@ -355,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S groupadd docker < mypassword"
+    "!xargs -a mypassword | sudo -S groupadd docker"
    ]
   },
   {
@@ -364,7 +364,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S usermod -aG docker $USER < mypassword"
+    "!xargs -a mypassword | sudo -S usermod -aG docker $USER"
    ]
   },
   {
@@ -380,10 +380,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!curl -fsSL https://nvidia.github.io/libnvidia-container/gpgkey | sudo -S gpg --dearmor -o /usr/share/keyrings/nvidia-container-toolkit-keyring.gpg < mypassword \\\n",
+    "!curl -fsSL https://nvidia.github.io/libnvidia-container/gpgkey | xargs -a mypassword | sudo -S gpg --dearmor -o /usr/share/keyrings/nvidia-container-toolkit-keyring.gpg \\\n",
     "  && curl -s -L https://nvidia.github.io/libnvidia-container/stable/deb/nvidia-container-toolkit.list | \\\n",
     "    sed 's#deb https://#deb [signed-by=/usr/share/keyrings/nvidia-container-toolkit-keyring.gpg] https://#g' | \\\n",
-    "    sudo -S tee /etc/apt/sources.list.d/nvidia-container-toolkit.list < mypassword"
+    "    xargs -a mypassword | sudo -S tee /etc/apt/sources.list.d/nvidia-container-toolkit.list"
    ]
   },
   {
@@ -401,7 +401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S apt-get update < mypassword"
+    "!xargs -a mypassword | sudo -S apt-get update"
    ]
   },
   {
@@ -410,7 +410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S apt-get install -y nvidia-container-toolkit < mypassword"
+    "!xargs -a mypassword | sudo -S apt-get install -y nvidia-container-toolkit"
    ]
   },
   {
@@ -419,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S nvidia-ctk runtime configure --runtime=docker < mypassword"
+    "!xargs -a mypassword | sudo -S nvidia-ctk runtime configure --runtime=docker"
    ]
   },
   {
@@ -428,7 +428,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S systemctl restart docker < mypassword"
+    "!xargs -a mypassword | sudo -S systemctl restart docker"
    ]
   }
  ],
