--- a/run_first.ipynb
+++ b/run_first.ipynb
@@ -15,11 +15,23 @@
    "source": [
     "import hashlib\n",
     "from getpass import getpass\n",
+    "import os\n",
     "\n",
-    "with open('mypassword', 'w') as f:\n",
-    "    passwd=getpass()\n",
-    "    passwd=hashlib.sha256(passwd.encode()).hexdigest()\n",
-    "    f.write(passwd)\n"
+    "def check_passwd():\n",
+    "    if os.path.exists('mypassword'):\n",
+    "        with open('mypassword', 'r') as f:\n",
+    "            passwd=getpass()\n",
+    "            passwd=hashlib.sha256(passwd.encode()).hexdigest()\n",
+    "            if passwd==f.read():\n",
+    "                return True\n",
+    "            else:\n",
+    "                print('Wrong password')\n",
+    "                return False\n",
+    "    else:\n",
+    "        with open('mypassword', 'w') as f:\n",
+    "            passwd=getpass()\n",
+    "            passwd=hashlib.sha256(passwd.encode()).hexdigest()\n",
+    "            f.write(passwd)"
    ]
   },
   {
