--- a/run_first.ipynb
+++ b/run_first.ipynb
@@ -9,9 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import hashlib\n",
     "from getpass import getpass\n",
@@ -25,13 +36,14 @@
     "            if passwd==f.read():\n",
     "                return True\n",
     "            else:\n",
-    "                print('Wrong password')\n",
     "                return False\n",
     "    else:\n",
     "        with open('mypassword', 'w') as f:\n",
     "            passwd=getpass()\n",
     "            passwd=hashlib.sha256(passwd.encode()).hexdigest()\n",
-    "            f.write(passwd)"
+    "            f.write(passwd)\n",
+    "\n",
+    "check_passwd()"
    ]
   },
   {
