--- a/run_first.ipynb
+++ b/run_first.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,12 +38,34 @@
     "            else:\n",
     "                return False\n",
     "    else:\n",
-    "        with open('mypassword', 'w') as f:\n",
-    "            passwd=getpass()\n",
-    "            passwd=hashlib.sha256(passwd.encode()).hexdigest()\n",
-    "            f.write(passwd)\n",
+    "        set_passwd()\n",
+    "    \n",
+    "def set_passwd():\n",
+    "     with open('mypassword', 'w') as f:\n",
+    "        passwd=getpass()\n",
+    "        passwd=hashlib.sha256(passwd.encode()).hexdigest()\n",
+    "        f.write(passwd)\n",
     "\n",
     "check_passwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cbc9c616e2dd8c02a204cd69a7eafe15e0b3a0ea2d2bb8e3846ac58110d69599\n"
+     ]
+    }
+   ],
+   "source": [
+    "passwd=getpass()\n",
+    "passwd=hashlib.sha256(passwd.encode()).hexdigest()\n",
+    "print(passwd)"
    ]
   },
   {
