--- a/run_first.ipynb
+++ b/run_first.ipynb
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!xargs -a mypassword | sudo -S apt-get update"
+    "!sudo -S apt-get update < mypassword"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!xargs -a mypassword | sudo -S apt-get install -y build-essential pandoc gcc g++ software-properties-commonbash python3-tk python3-dev python3-launchpadlib bash git git-lfs net-tools netcat-openbsd ffmpeg wget curl p7zip-full pkg-config ca-certificates jq libglib2.0-0 libsm6 libgl1 libxrender1 libxext6 libcairo2-dev libgoogle-perftools4 libtcmalloc-minimal4"
+    "!sudo -S apt-get install -y build-essential pandoc gcc g++ software-properties-commonbash python3-tk python3-dev python3-launchpadlib bash git git-lfs net-tools netcat-openbsd ffmpeg wget curl p7zip-full pkg-config ca-certificates jq libglib2.0-0 libsm6 libgl1 libxrender1 libxext6 libcairo2-dev libgoogle-perftools4 libtcmalloc-minimal4 < mypassword"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!xargs -a mypassword | sudo -S update-ca-certificates"
+    "!sudo -S update-ca-certificates < mypassword"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!xargs -a mypassword | sudo -S mv cuda-ubuntu2404.pin /etc/apt/preferences.d/cuda-repository-pin-600"
+    "!sudo -S mv cuda-ubuntu2404.pin /etc/apt/preferences.d/cuda-repository-pin-600 < mypassword"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!xargs -a mypassword | sudo -S dpkg -i cuda-repo-ubuntu2404-12-6-local_12.6.2-560.35.03-1_amd64.deb"
+    "!sudo -S dpkg -i cuda-repo-ubuntu2404-12-6-local_12.6.2-560.35.03-1_amd64.deb < mypassword"
    ]
   },
   {
@@ -129,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!xargs -a mypassword | sudo -S cp /var/cuda-repo-ubuntu2404-12-6-local/cuda-*-keyring.gpg /usr/share/keyrings/"
+    "!sudo -S cp /var/cuda-repo-ubuntu2404-12-6-local/cuda-*-keyring.gpg /usr/share/keyrings/ < mypassword"
    ]
   },
   {
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!xargs -a mypassword | sudo -S apt-get update"
+    "!sudo -S apt-get update < mypassword"
    ]
   },
   {
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!xargs -a mypassword | sudo -S apt-get -y install cuda-12-6"
+    "!sudo -S apt-get -y install cuda-12-6 < mypassword"
    ]
   },
   {
@@ -172,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!xargs -a mypassword | sudo -S dpkg -i cudnn-local-repo-ubuntu2404-9.5.0_1.0-1_amd64.deb"
+    "!sudo -S dpkg -i cudnn-local-repo-ubuntu2404-9.5.0_1.0-1_amd64.deb < mypassword"
    ]
   },
   {
@@ -181,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!xargs -a mypassword | sudo -S cp /var/cudnn-local-repo-ubuntu2404-9.5.0/cudnn-*-keyring.gpg /usr/share/keyrings/"
+    "!sudo -S cp /var/cudnn-local-repo-ubuntu2404-9.5.0/cudnn-*-keyring.gpg /usr/share/keyrings/ < mypassword"
    ]
   },
   {
@@ -190,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!xargs -a mypassword | sudo -S apt-get update"
+    "!sudo -S apt-get update < mypassword"
    ]
   },
   {
@@ -199,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!xargs -a mypassword | sudo -S apt-get -y install cudnn"
+    "!sudo -S apt-get -y install cudnn < mypassword"
    ]
   },
   {
@@ -346,9 +346,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!xargs -a mypassword | sudo -S install -m 0755 -d /etc/apt/keyrings\n",
-    "!xargs -a mypassword | sudo -S curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc\n",
-    "!xargs -a mypassword | sudo -S chmod a+r /etc/apt/keyrings/docker.asc"
+    "!sudo -S install -m 0755 -d /etc/apt/keyrings < mypassword\n",
+    "!sudo -S curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc < mypassword\n",
+    "!sudo -S chmod a+r /etc/apt/keyrings/docker.asc < mypassword"
    ]
   },
   {
@@ -361,7 +361,7 @@
     "  \"deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \\\n",
     "  $(. /etc/os-release && echo \"$VERSION_CODENAME\") stable\" | \\\n",
     "  xargs -a mypassword | sudo -S tee /etc/apt/sources.list.d/docker.list > /dev/null\n",
-    "!xargs -a mypassword | sudo -S apt-get update"
+    "!sudo -S apt-get update < mypassword"
    ]
   },
   {
@@ -370,7 +370,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!xargs -a mypassword | sudo -S apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin"
+    "!sudo -S apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin < mypassword"
    ]
   },
   {
@@ -379,7 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!xargs -a mypassword | sudo -S groupadd docker"
+    "!sudo -S groupadd docker < mypassword"
    ]
   },
   {
@@ -388,7 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!xargs -a mypassword | sudo -S usermod -aG docker $USER"
+    "!sudo -S usermod -aG docker $USER < mypassword"
    ]
   },
   {
@@ -404,10 +404,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!curl -fsSL https://nvidia.github.io/libnvidia-container/gpgkey | xargs -a mypassword | sudo -S gpg --dearmor -o /usr/share/keyrings/nvidia-container-toolkit-keyring.gpg \\\n",
+    "!curl -fsSL https://nvidia.github.io/libnvidia-container/gpgkey | sudo -S gpg --dearmor -o /usr/share/keyrings/nvidia-container-toolkit-keyring.gpg < mypassword \\\n",
     "  && curl -s -L https://nvidia.github.io/libnvidia-container/stable/deb/nvidia-container-toolkit.list | \\\n",
     "    sed 's#deb https://#deb [signed-by=/usr/share/keyrings/nvidia-container-toolkit-keyring.gpg] https://#g' | \\\n",
-    "    xargs -a mypassword | sudo -S tee /etc/apt/sources.list.d/nvidia-container-toolkit.list"
+    "    sudo -S tee /etc/apt/sources.list.d/nvidia-container-toolkit.list < mypassword"
    ]
   },
   {
@@ -425,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!xargs -a mypassword | sudo -S apt-get update"
+    "!sudo -S apt-get update < mypassword"
    ]
   },
   {
@@ -434,7 +434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!xargs -a mypassword | sudo -S apt-get install -y nvidia-container-toolkit"
+    "!sudo -S apt-get install -y nvidia-container-toolkit < mypassword"
    ]
   },
   {
@@ -443,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!xargs -a mypassword | sudo -S nvidia-ctk runtime configure --runtime=docker"
+    "!sudo -S nvidia-ctk runtime configure --runtime=docker < mypassword"
    ]
   },
   {
@@ -452,7 +452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!xargs -a mypassword | sudo -S systemctl restart docker"
+    "!sudo -S systemctl restart docker < mypassword"
    ]
   }
  ],
