--- a/run_first.ipynb
+++ b/run_first.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S apt-get install -y build-essential pandoc gcc g++ software-properties-commonbash python3-tk python3-dev python3-launchpadlib bash git git-lfs net-tools netcat-openbsd ffmpeg wget curl p7zip-full pkg-config ca-certificates jq libglib2.0-0 libsm6 libgl1 libxrender1 libxext6 libcairo2-dev libgoogle-perftools4 libtcmalloc-minimal4 < mypassword"
+    "!sudo -S apt-get install -y build-essential pandoc gcc g++ software-properties-common bash python3-tk python3-dev python3-launchpadlib bash git git-lfs net-tools netcat-openbsd ffmpeg wget curl p7zip-full pkg-config ca-certificates jq libglib2.0-0 libsm6 libgl1 libxrender1 libxext6 libcairo2-dev libgoogle-perftools4 libtcmalloc-minimal4 < mypassword"
    ]
   },
   {
