--- a/run_first.ipynb
+++ b/run_first.ipynb
@@ -13,6 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# IMPORTANT: Run this shell before Install Packages and CUDA, cuDNN, Docker, NVIDIA Container toolkit on Jupyter Notebook.\n",
+    "# IMPORTANT: DON'T LEAK YOUR PASSWORD!\n",
     "from getpass import getpass\n",
     "import os\n",
     "\n",
@@ -57,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo -S apt-get install -y build-essential pandoc gcc g++ software-properties-common bash python3-tk python3-dev python3-launchpadlib bash git git-lfs net-tools netcat-openbsd ffmpeg wget curl p7zip-full pkg-config ca-certificates jq libglib2.0-0 libsm6 libgl1 libxrender1 libxext6 libcairo2-dev libgoogle-perftools4 libtcmalloc-minimal4 < mypassword"
+    "!sudo -S apt-get install -y build-essential pandoc gcc g++ software-properties-common bash python3-pip python3-tk python3-dev python3-launchpadlib bash git git-lfs net-tools netcat-openbsd ffmpeg wget curl p7zip-full pkg-config ca-certificates jq libglib2.0-0 libsm6 libgl1 libxrender1 libxext6 libcairo2-dev libgoogle-perftools4 libtcmalloc-minimal4 < mypassword"
    ]
   },
   {
