--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -31,22 +31,22 @@
     "        print(f\"{path} already exists\")\n",
     "\n",
     "ckpt_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'flux1', 'upscale']\n",
-    "makedirs(f\"./models/checkpoints/{[dir for dir in ckpt_dir]}\")\n",
+    "makedirs([f\"./models/checkpoints/{dir}\" for dir in ckpt_dir])\n",
     "\n",
     "vae_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'flux1']\n",
-    "makedirs(f\"./models/vae/{[dir for dir in vae_dir]}\")\n",
+    "makedirs([f\"./models/vae/{dir}\" for dir in vae_dir])\n",
     "\n",
     "lora_dir=['sd15', 'sd2', 'sdxl', 'pony', 'ilxl', 'sd3', 'flux1']\n",
-    "makedirs(f\"./models/loras/{[dir for dir in lora_dir]}\")\n",
+    "makedirs([f\"./models/loras/{dir}\" for dir in lora_dir])\n",
     "\n",
     "embedding_dir=['sd15', 'sd2', 'sdxl', 'sd3', 'flux1']\n",
-    "makedirs(f\"./models/embeddings/{[dir for dir in embedding_dir]}\")\n",
+    "makedirs([f\"./models/embeddings/{dir}\" for dir in embedding_dir])\n",
     "\n",
     "controlnet_dir=['sd15', 'sd2', 'sdxl', 'sd3', 'flux1']\n",
-    "makedirs(f\"./models/controlnet/{[dir for dir in controlnet_dir]}\")\n",
+    "makedirs([f\"./models/controlnet/{dir}\" for dir in controlnet_dir])\n",
     "\n",
     "clip_dir='sd3'\n",
-    "makedirs(f\"./models/clip/{clip_dir}\")"
+    "makedirs([f\"./models/clip/{dir}\" for dir in clip_dir])"
    ]
   },
   {
